--- a/index.html
+++ b/index.html
@@ -3,14 +3,38 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="Reliable reporting for decisions that matter. Excel VBA & Power BI systems for organisations where accuracy and trust are non-negotiable.">
-<meta name="keywords" content="Excel VBA, Power BI, financial reporting, operational reporting, business intelligence">
+<meta name="description" content="Zohal Zahir — Analytics Consultant specialising in Excel VBA automation and Power BI dashboards. Reliable reporting systems for finance and operations teams where accuracy and trust are non-negotiable.">
+<meta name="keywords" content="Excel VBA, Power BI, financial reporting, operational reporting, business intelligence, Excel automation, Power BI dashboards, data analytics Australia, reporting consultant">
 <meta name="author" content="Zohal Zahir">
+<meta name="robots" content="index, follow">
+<meta property="og:title" content="DATASANJ | Reliable Reporting for Decisions That Matter">
+<meta property="og:description" content="Excel VBA & Power BI systems for organisations where accuracy and trust are non-negotiable.">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://datasanj.com">
 <title>DATASANJ | Reliable Reporting for Decisions That Matter</title>
 <link rel="canonical" href="https://datasanj.com/index.html">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "ProfessionalService",
+  "name": "DATASANJ",
+  "description": "Analytics consultancy specialising in Excel VBA automation and Power BI dashboards for finance and operations teams.",
+  "url": "https://datasanj.com",
+  "email": "d_zohal@datasanj.com",
+  "founder": {
+    "@type": "Person",
+    "name": "Zohal Zahir",
+    "jobTitle": "Analytics Consultant"
+  },
+  "areaServed": "Australia",
+  "serviceType": ["Excel VBA Automation", "Power BI Dashboards", "Financial Reporting", "Operational Reporting", "Process Optimisation"]
+}
+</script>
+
 <style>
 :root {
   --charcoal: #2B2B2B;
@@ -52,7 +76,7 @@ nav a.active::after { content: ''; position: absolute; bottom: -6px; left: 0; ri
 /* Hero Section */
 .hero {
   margin-top: 84px;
-  padding: 160px 0 120px;
+  padding: 120px 0 100px;
   background: linear-gradient(135deg, var(--charcoal) 0%, var(--charcoal-light) 100%);
   color: var(--warm-white);
   text-align: center;
@@ -60,6 +84,28 @@ nav a.active::after { content: ''; position: absolute; bottom: -6px; left: 0; ri
 .hero-content {
   max-width: 820px;
   margin: 0 auto;
+}
+.hero-headshot {
+  width: 130px;
+  height: 130px;
+  border-radius: 50%;
+  object-fit: cover;
+  border: 3px solid var(--copper);
+  margin: 0 auto 20px;
+}
+.hero-name {
+  font-size: 24px;
+  font-weight: 600;
+  letter-spacing: 0.01em;
+  margin-bottom: 4px;
+}
+.hero-role {
+  font-size: 14px;
+  font-weight: 400;
+  color: var(--copper-light);
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+  margin-bottom: 40px;
 }
 .hero h1 {
   font-size: 48px;
@@ -172,9 +218,11 @@ footer { background: var(--charcoal); color: var(--warm-white); padding: 80px 0 
 @media (max-width: 768px) {
   .container { padding: 0 24px; }
   nav ul { display: none; }
-  .hero { padding: 120px 0 80px; }
+  .hero { padding: 100px 0 80px; }
   .hero h1 { font-size: 32px; }
   .hero .subtitle { font-size: 18px; }
+  .hero-headshot { width: 110px; height: 110px; }
+  .hero-name { font-size: 20px; }
   .section-title { font-size: 28px; }
   .section-intro { font-size: 16px; }
   .focus-grid { grid-template-columns: 1fr; }
@@ -216,25 +264,28 @@ footer { background: var(--charcoal); color: var(--warm-white); padding: 80px 0 
 <section class="hero">
   <div class="container">
     <div class="hero-content">
-      <h1>I help finance and operations teams turn fragile Excel & Power BI reporting into accurate, automated dashboards—saving hours and building trust in every number.</h1>
-      <p class="subtitle">Microsoft-Certified Power BI Analyst & Data Science Graduate. I stabilise high-risk reporting systems, automate manual processes, and deliver insights businesses can rely on—without unnecessary rebuilds or disruption.</p>
+      <img src="zohheadshot_Cropped.JPG" alt="Zohal Zahir — Power BI Analyst and Excel VBA Consultant" class="hero-headshot" width="130" height="130">
+      <p class="hero-name">Zohal Zahir</p>
+      <p class="hero-role">Power BI Analyst &amp; Excel VBA Consultant</p>
+      <h1>Fragile spreadsheets and unreliable dashboards cost your team hours and trust. I fix that.</h1>
+      <p class="subtitle">Microsoft-Certified Power BI Analyst &amp; Data Science Graduate. I stabilise high-risk Excel and Power BI reporting, automate manual processes, and deliver dashboards your team can rely on—without unnecessary rebuilds or disruption.</p>
       <a href="Contact.html" class="hero-cta">Book a Free Consultation →</a>
     </div>
   </div>
 </section>
 
-<!-- The rest of your HTML remains unchanged... -->
 <!-- What I Do Section -->
 <section class="section">
-<div class="container">
-<div class="section-label">What I Do</div>
-<h2 class="section-title">What I Do</h2>
-<div class="what-i-do-content">
-<p>Most organisations don't struggle with a lack of data. They struggle with inconsistent numbers, fragile systems, and reporting no one fully trusts.</p>
-<p>I work with businesses where reporting is already critical — and needs to be dependable.</p>
-</div>
-</div>
+  <div class="container">
+    <div class="section-label">What I Do</div>
+    <h2 class="section-title">What I Do</h2>
+    <div class="what-i-do-content">
+      <p>Most organisations don't lack data—they lack confidence in their numbers. Fragile spreadsheets, inconsistent reports, and manual processes create risk and waste time.</p>
+      <p>I work with finance and operations teams to fix that: stabilising the reporting systems you already depend on, and making them accurate, automated, and trustworthy.</p>
+    </div>
+  </div>
 </section>
+
 <!-- Who This Is For Section -->
 <section class="section bg-cream">
   <div class="container">
@@ -244,21 +295,21 @@ footer { background: var(--charcoal); color: var(--warm-white); padding: 80px 0 
       <p class="who-intro">I help finance and operations teams who are dealing with:</p>
       <div class="who-list">
         <ul>
-          <li>Fragile Excel workbooks and Power BI reports that frequently break.</li>
-          <li>Manual reporting processes that take hours each week.</li>
-          <li>Data inconsistencies across departments that create distrust.</li>
-          <li>High-risk financial reporting where mistakes are costly.</li>
+          <li>Excel workbooks and Power BI reports that break at the worst possible time.</li>
+          <li>Manual reporting that eats up hours every week.</li>
+          <li>Numbers that don't match across departments—eroding confidence in decisions.</li>
+          <li>High-stakes financial reporting where a single mistake is costly.</li>
         </ul>
       </div>
       <h3 class="who-subheading">And who want:</h3>
       <div class="who-list">
         <ul>
-          <li>Accurate, automated reporting systems.</li>
-          <li>Clear, reliable dashboards that everyone can trust.</li>
-          <li>Processes that save time and reduce risk.</li>
+          <li>Reporting systems that work reliably, every time.</li>
+          <li>Dashboards the whole team can trust at a glance.</li>
+          <li>Processes that save time and reduce the risk of errors.</li>
         </ul>
       </div>
-      <p class="who-closing">If this sounds like you, we’ll make your reporting reliable and stress-free.</p>
+      <p class="who-closing">If this sounds familiar, let's make your reporting something you can rely on—not worry about.</p>
     </div>
   </div>
 </section>
@@ -270,20 +321,20 @@ footer { background: var(--charcoal); color: var(--warm-white); padding: 80px 0 
     <h2 class="section-title">What I Focus On</h2>
     <div class="focus-grid">
       <div class="focus-card">
-        <h3>Excel Automation & VBA</h3>
-        <p>Stabilising critical spreadsheets, automating repetitive tasks, and ensuring consistent, accurate outputs.</p>
+        <h3>Excel Automation &amp; VBA</h3>
+        <p>Stabilising critical spreadsheets, automating repetitive tasks, and building in checks so your outputs are consistent and accurate.</p>
       </div>
       <div class="focus-card">
         <h3>Power BI Dashboards</h3>
-        <p>Designing intuitive dashboards with clean data models, automated refreshes, and trustworthy metrics.</p>
+        <p>Designing clean, intuitive dashboards with reliable data models, automated refreshes, and metrics your team actually trusts.</p>
       </div>
       <div class="focus-card">
-        <h3>Financial & Operational Reporting</h3>
-        <p>Implementing reporting systems that are accurate, auditable, and tailored to decision-making needs.</p>
+        <h3>Financial &amp; Operational Reporting</h3>
+        <p>Building reporting systems that are accurate, auditable, and structured around the decisions your business needs to make.</p>
       </div>
       <div class="focus-card">
         <h3>Process Optimisation</h3>
-        <p>Streamlining workflows, reducing errors, and saving hours in manual reporting processes.</p>
+        <p>Cutting out unnecessary manual steps, reducing errors, and giving your team hours back every week.</p>
       </div>
     </div>
   </div>
@@ -294,31 +345,31 @@ footer { background: var(--charcoal); color: var(--warm-white); padding: 80px 0 
   <div class="container">
     <div class="section-label">Process</div>
     <h2 class="section-title">How I Work</h2>
-    <p class="process-intro">My approach is simple, practical, and collaborative. I focus on understanding your system, stabilising it, and delivering results you can trust.</p>
+    <p class="process-intro">Practical, collaborative, and focused on results. I get to know your system, stabilise what's broken, and hand you something you can trust.</p>
     <div class="process-steps">
       <div class="process-step">
         <div class="step-number">1</div>
         <div class="step-content">
-          <h3>Discovery & Assessment</h3>
-          <p>We review your current reporting, identify risks, inefficiencies, and opportunities for automation.</p>
+          <h3>Discovery &amp; Assessment</h3>
+          <p>We walk through your current reporting together—identifying what's breaking, where the risks are, and what can be automated.</p>
         </div>
       </div>
       <div class="process-step">
         <div class="step-number">2</div>
         <div class="step-content">
-          <h3>Implementation & Automation</h3>
-          <p>I stabilise spreadsheets, implement Power BI dashboards, and automate manual processes to reduce errors.</p>
+          <h3>Implementation &amp; Automation</h3>
+          <p>I stabilise your spreadsheets, build or fix your Power BI dashboards, and automate the manual work that's costing your team time.</p>
         </div>
       </div>
       <div class="process-step">
         <div class="step-number">3</div>
         <div class="step-content">
-          <h3>Validation & Handover</h3>
-          <p>Ensuring everything works reliably. I provide documentation, training, and support so your team can confidently use the systems.</p>
+          <h3>Validation &amp; Handover</h3>
+          <p>Everything is tested, documented, and handed over with training—so your team can own the system with confidence going forward.</p>
         </div>
       </div>
     </div>
-    <p class="process-closing">My goal: reporting you can trust, processes that save time, and insights that actually inform decisions.</p>
+    <p class="process-closing">The goal: reporting you trust, processes that save time, and insights that actually drive decisions.</p>
   </div>
 </section>
 
@@ -329,13 +380,13 @@ footer { background: var(--charcoal); color: var(--warm-white); padding: 80px 0 
     <h2 class="section-title">Why Work With Me</h2>
     <div class="why-content">
       <ul>
-        <li>Certified Power BI analyst with a strong data science background.</li>
-        <li>Hands-on experience stabilising fragile reporting systems in finance and operations.</li>
-        <li>Proactive problem solver: I fix issues before they become risks.</li>
-        <li>Focus on efficiency: saving your team time without compromising accuracy.</li>
-        <li>Flexible approach tailored to your business needs.</li>
+        <li>Microsoft-Certified Power BI Analyst with a data science background.</li>
+        <li>Hands-on experience fixing fragile reporting in finance and operations.</li>
+        <li>I spot and resolve issues before they become expensive problems.</li>
+        <li>Focused on saving your team time without cutting corners on accuracy.</li>
+        <li>Flexible approach—I work around your existing tools and processes.</li>
       </ul>
-      <p class="why-closing">I deliver dependable systems that empower your team and support confident decision-making.</p>
+      <p class="why-closing">I deliver dependable systems that give your team confidence in every number.</p>
     </div>
   </div>
 </section>
@@ -346,7 +397,7 @@ footer { background: var(--charcoal); color: var(--warm-white); padding: 80px 0 
     <div class="section-label">Location</div>
     <h2 class="section-title">Where I Work</h2>
     <div class="location-content">
-      <p>I work remotely with clients across Australia and internationally, adapting to your systems and workflows.</p>
+      <p>Based in Australia, working remotely with clients locally and internationally. I adapt to your systems and workflows.</p>
     </div>
   </div>
 </section>
@@ -354,7 +405,7 @@ footer { background: var(--charcoal); color: var(--warm-white); padding: 80px 0 
 <!-- CTA Section -->
 <section class="cta-section">
   <div class="container">
-    <p>Ready to stabilise your reporting systems and save hours every week?</p>
+    <p>Ready to stop worrying about your reporting and start trusting it?</p>
     <a href="Contact.html" class="btn">Book Your Free Consultation →</a>
   </div>
 </section>
@@ -365,12 +416,11 @@ footer { background: var(--charcoal); color: var(--warm-white); padding: 80px 0 
     <div class="footer-grid">
       <div class="footer-brand">
         <h3>DATASANJ</h3>
-        <p>Reliable reporting for finance & operations teams. Excel, Power BI, and automated dashboards you can trust.</p>
+        <p>Reliable reporting for finance &amp; operations teams. Excel VBA automation, Power BI dashboards, and reporting systems you can trust.</p>
       </div>
       <div class="footer-contact">
         <h4>Contact</h4>
-        <a href="mailto:hello@datasanj.com">hello@datasanj.com</a>
-        <a href="tel:+61234567890">+61 2 3456 7890</a>
+        <a href="mailto:d_zohal@datasanj.com">d_zohal@datasanj.com</a>
       </div>
       <div class="footer-links">
         <h4>Links</h4>
@@ -384,7 +434,7 @@ footer { background: var(--charcoal); color: var(--warm-white); padding: 80px 0 
       <div class="footer-links">
         <h4>Legal</h4>
         <a href="Privacy.html">Privacy Policy</a>
-        <a href="Terms.html">Terms & Conditions</a>
+        <a href="Terms.html">Terms &amp; Conditions</a>
       </div>
     </div>
     <div class="footer-bottom">
