--- a/index.html
+++ b/index.html
@@ -92,6 +92,8 @@ nav a.active::after { content: ''; position: absolute; bottom: -6px; left: 0; ri
   object-fit: cover;
   border: 3px solid var(--copper);
   margin: 0 auto 20px;
+  image-rendering: -webkit-optimize-contrast;
+  image-rendering: crisp-edges;
 }
 .hero-name {
   font-size: 24px;
@@ -264,9 +266,9 @@ footer { background: var(--charcoal); color: var(--warm-white); padding: 80px 0 
 <section class="hero">
   <div class="container">
     <div class="hero-content">
-      <img src="Zohal Cropped serious face.JPG" alt="Zohal Zahir — Excel VBA & Power BI Specialist" class="hero-headshot" width="130" height="130">
+      <img src="zohheadshot_Cropped.JPG" alt="Zohal Zahir — Power BI Analyst and Excel VBA Consultant" class="hero-headshot" width="130" height="130">
       <p class="hero-name">Zohal Zahir</p>
-      <p class="hero-role">Power BI Analyst &amp; Excel VBA Consultant</p>
+      <p class="hero-role">Excel VBA &amp; Power BI Specialist</p>
       <h1>Fragile spreadsheets and unreliable dashboards cost your team hours and trust. I fix that.</h1>
       <p class="subtitle">Microsoft-Certified Power BI Analyst &amp; Data Science Graduate. I stabilise high-risk Excel and Power BI reporting, automate manual processes, and deliver dashboards your team can rely on—without unnecessary rebuilds or disruption.</p>
       <a href="Contact.html" class="hero-cta">Book a Free Consultation →</a>
@@ -420,7 +422,7 @@ footer { background: var(--charcoal); color: var(--warm-white); padding: 80px 0 
       </div>
       <div class="footer-contact">
         <h4>Contact</h4>
-        <a href="mailto:d_zohal@datasanj.com">d_zohal@datasanj.com</a>
+        <a href="/cdn-cgi/l/email-protection#12764d687d7a737e527673667361737c783c717d7f"><span class="__cf_email__" data-cfemail="35516a4f5a5d5459755154415446545b5f1b565a58">[email&#160;protected]</span></a>
       </div>
       <div class="footer-links">
         <h4>Links</h4>
@@ -436,11 +438,3 @@ footer { background: var(--charcoal); color: var(--warm-white); padding: 80px 0 
         <a href="Privacy.html">Privacy Policy</a>
         <a href="Terms.html">Terms &amp; Conditions</a>
       </div>
-    </div>
-    <div class="footer-bottom">
-      &copy; 2026 DATASANJ. All rights reserved.
-    </div>
-  </div>
-</footer>
-</body>
-</html>
