--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@ footer { background: var(--charcoal); color: var(--warm-white); padding: 80px 0 
 <section class="hero">
   <div class="container">
     <div class="hero-content">
-      <img src="zohheadshot_Cropped.JPG" alt="Zohal Zahir — Power BI Analyst and Excel VBA Consultant" class="hero-headshot" width="130" height="130">
+      <img src="Zohal Cropped serious face (1).jpg" alt="Zohal Zahir — Power BI Analyst and Excel VBA Consultant" class="hero-headshot" width="130" height="130">
       <p class="hero-name">Zohal Zahir</p>
       <p class="hero-role">Excel VBA &amp; Power BI Specialist</p>
       <h1>Fragile spreadsheets and unreliable dashboards cost your team hours and trust. I fix that.</h1>
