--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@ footer { background: var(--charcoal); color: var(--warm-white); padding: 80px 0 
       </div>
       <div class="footer-contact">
         <h4>Contact</h4>
-        <a href="/cdn-cgi/l/email-protection#12764d687d7a737e527673667361737c783c717d7f"><span class="__cf_email__" data-cfemail="35516a4f5a5d5459755154415446545b5f1b565a58">[email&#160;protected]</span></a>
+        <a href="/cdn-cgi/l/email-d_zohal@datasanj.com</span></a>
       </div>
       <div class="footer-links">
         <h4>Links</h4>
