--- a/About.html
+++ b/About.html
@@ -643,7 +643,7 @@
         <div class="container">
             <div class="hero-image-wrapper">
                 <div class="hero-image">
-                    <img src="zohheadshot_Cropped (1).jpg" alt="Zohal Zahir">
+                    <img src="zohheadshot_Cropped.JPG" alt="Zohal Zahir">
                 </div>
             </div>
             <div class="hero-content">
@@ -656,10 +656,10 @@
                     <span class="badge featured">Microsoft Certified</span>
                     <span class="badge featured">Xero Advisor</span>
                     <span class="badge">Top Rated Upwork</span>
-                    <span class="badge">70+ Projects</span>
+                    <span class="badge">75+ Projects</span>
                     <span class="badge">100% Success</span>
                     <span class="badge">University of Adelaide</span>
-                    <span class="badge">Cert IV Accounting</span>
+                    <span class="badge">Cert III Accounting</span>
                 </div>
             </div>
         </div>
@@ -902,6 +902,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
