--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@ footer { background: var(--charcoal); color: var(--warm-white); padding: 80px 0 
       </div>
       <div class="footer-contact">
         <h4>Contact</h4>
-        <a href="/cdn-cgi/l/email-d_zohal@datasanj.com</span></a>
+        <a href="Email: d_zohal@datasanj.com</a>
       </div>
       <div class="footer-links">
         <h4>Links</h4>
