--- a/index.html
+++ b/index.html
@@ -413,28 +413,56 @@ footer { background: var(--charcoal); color: var(--warm-white); padding: 80px 0 
 </section>
 
 <!-- Footer -->
-<footer>
-  <div class="container">
-    <div class="footer-grid">
-      <div class="footer-brand">
-        <h3>DATASANJ</h3>
-        <p>Reliable reporting for finance &amp; operations teams. Excel VBA automation, Power BI dashboards, and reporting systems you can trust.</p>
-      </div>
-      <div class="footer-contact">
-        <h4>Contact</h4>
-        <a href="Email: d_zohal@datasanj.com</a>
-      </div>
-      <div class="footer-links">
-        <h4>Links</h4>
-        <a href="index.html">Home</a>
-        <a href="About.html">About</a>
-        <a href="services.html">Services</a>
-        <a href="Portfolio.html">Portfolio</a>
-        <a href="Blog.html">Insights</a>
-        <a href="Contact.html">Contact</a>
-      </div>
-      <div class="footer-links">
-        <h4>Legal</h4>
-        <a href="Privacy.html">Privacy Policy</a>
-        <a href="Terms.html">Terms &amp; Conditions</a>
-      </div>
+    <footer>
+        <div class="container">
+            <div class="footer-grid">
+                <div class="footer-brand">
+                    <h3>DATASANJ</h3>
+                    <p>Power BI and Excel Consultant based in Canberra,Australia. Microsoft Certified & Xero Advisor. </p>
+                    <div class="footer-contact">
+                        <a href="mailto:d_zohal@datasanj.com">d_zohal@datasanj.com</a>
+                        <a href="#">Canberra, ACT, Australia</a>
+                    </div>
+                </div>
+
+                <div class="footer-links">
+                    <h4>Navigation</h4>
+                    <a href="index.html">Home</a>
+                    <a href="About.html">About</a>
+                    <a href="services.html">Services</a>
+                    <a href="Portfolio.html">Portfolio</a>
+                    <a href="Blog.html">Insights</a>
+                    <a href="Contact.html">Contact</a>
+                </div>
+
+                <div class="footer-links">
+                    <h4>What I Do</h4>
+                    <a href="services.html">Power BI Dashboards</a>
+                    <a href="services.html">Excel Automation</a>
+                    <a href="services.html">System Integration</a>
+                    <a href="services.html">Xero to Power BI</a>
+                </div>
+
+                <div class="footer-links">
+                    <h4>Connect</h4>
+                    <a href="https://www.linkedin.com/in/zohal-zahir-46128697/" target="_blank">LinkedIn</a>
+                    <a href="https://github.com/Zohal987654321" target="_blank">GitHub</a>
+                    <a href="https://www.upwork.com/freelancers/zohalz" target="_blank">Upwork Profile</a>
+                </div>
+            </div>
+
+            <div class="footer-bottom">
+                © 2026 DATASANJ | Analytics Consultancy by Zohal Zahir
+            </div>
+        </div>
+    </footer>
+</body>
+</html>
+
+
+
+
+
+
+
+
